--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,16 @@
 @import "tailwindcss";
 
 body {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 #root {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
-    
+  @apply bg-amber-600;
 }
